# HRLMS

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  example.env  main.py  pyproject.toml  seed_interviewers.py
ai_interview_backend.egg-info/: PKG-INFO  (+3 more)
backend/: README.md  alembic.ini  main.py  pyproject.toml
backend/agents/ai_interview/: interview_agent.py
backend/alembic/versions/: afeb89634308_remove_expected_keywords_from_ai_.py  e05712be3260_drop_interview_rounds_and_target_.py  f08a1c19d1af_initial_migration.py  transfer_users_to_usage_agg.py  user_subscriptions.py
backend/config/: bulk_invite_download_template.py
backend/connections/: mongo_connection.py  mysql_connection.py  seed_data.py
backend/custom_utilities/: account_utility.py  admin_bulk_invite.py  authorization.py  classroom_helper.py  custom_exception.py  dependencies.py  email_template_renderer.py  email_utils.py  otp_utils.py  s3_utils.py  security_utility.py  validated_urls.py
backend/custom_utilities/email_templates/: content_published_notification.html  otp_email_template_class_invite_teacher.html  tenant_invite.html
backend/dto/request_dto/: ai_interview.py
backend/dto/response_dto/: ai_interview.py
backend/enums/: admin_enums.py  course_management.py  file_types.py  role_enum.py
backend/middleware/: tenant_middleware.py
backend/models/: __init__.py  ai_interview_model.py
backend/repository/: ai_interview_management.py
backend/routers/: ai_interview_management.py
(+61 files in other folders)
